<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Firebase Auth</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="txt_forgot_password">Forgot password ?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_password_reset">Password reset</string>
    <string name="action_sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This password address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing password completions."</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_password_recovery">Password Reset</string>
    <string name="msg_email_address_not_verified">Your account has been created.</string>
    <string name="verify_face">VERIFY FACE</string>
    <string name="back">BACK</string>
    <string name="login">LOGIN</string>

</resources>
